--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,18 +3,17 @@
   "compilerOptions": {
     "strict": true,
     "paths": {
-      "@firebase/auth": [
-        "./node_modules/@firebase/auth/dist/index.rn.d.ts"
-      ],
-      "@/*": [
-        "./*"
-      ]
+      "@assets/*": ["./assets/*"],
+      "@firebase/auth": ["./node_modules/@firebase/auth/dist/index.rn.d.ts"],
+      "@/*": ["./*"]
     }
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
-    "expo-env.d.ts"
+    "expo-env.d.ts",
+    "svg.d.ts",
+    "images.d.ts"
   ]
 }
