--- a/eas.json
+++ b/eas.json
@@ -11,6 +11,9 @@
     },
     "preview": {
       "distribution": "internal",
+      "ios": {
+        "distribution": "store"
+      },
       "channel": "preview"
     },
     "production": {
